fix now-indicator not showing
Was previously overwritten by CSS.

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,14 +11,7 @@
 
 .day-header {
   background-color: var(--joy-palette-neutral-900, #fbfcfe) !important;
-  border-color: var(--joy-palette-neutral-600, #cdd7e1) !important;
   color: var(--joy-palette-neutral-200, #32383e) !important;
-}
-
-.day-cell {
-  background-color: var(--joy-palette-neutral-800, #32383e) !important;
-  border-color: var(--joy-palette-neutral-700, #cdd7e1) !important;
-  color: var(--joy-palette-neutral-300, #32383e) !important;
 }
 
 .week-number {
